// ====================================================================
// HISTORY
// VERSION : 1.1.2 : FA : #7453 : 07/08/2017 : Move adapters folder in client folder
// END-HISTORY
// ====================================================================

package dataControllerUtils.protobuf;


message SessionGetTime {
extensions 2 to 105;
    required uint32 id = 1;
}
